style.css
* {
  margin: 0;
}

/*Fonts*/
@font-face {
  font-family: Inter-SemiBold;
  src: url(fonts/static/Inter_18pt-SemiBold.ttf);
}

@font-face {
  font-family: Inter-Regular;
  src: url(fonts/static/Inter_18pt-Regular.ttf);
}

@font-face {
  font-family: Inter-Medium;
  src: url(fonts/static/Inter_18pt-Medium.ttf);
}

/*Header*/
header {
  display: flex;
  width: 100%;
  height: 64px;
  color: #f0f0f0;
  background-color: hsl(0, 0%, 10%);
  align-items: center;
  position: fixed;
  z-index: 1;
}

#logo{
  height: 48px;
}

#title {
  display: flex;
  gap: 8px;
  align-items: center;
  font-family: Inter-SemiBold;
  font-size: 24px;
}

#title,
#log {
  margin: 0px 50px 0px 50px;
}

#log {
  display: flex;
  gap: 16px;
  position: absolute;
  right: 0px;
}

.login {
  width: 120px;
  height: 36px;
  border-radius: 50px;
  color: #f0f0f0;
  font-size: 16px;
  font-family: Inter-SemiBold;
}

#medlem {
  background-color: #d84797;
  border: 1px solid #d84797;
}

#medlem:hover{
  box-shadow: 8px 8px 8px hsl(0, 0%, 0%), -6px -6px 8px hsl(0, 0%, 18%);
  box-shadow: 6px 6px 8px hsl(327, 65%, 62%) inset,
    -6px -6px 8px hsl(327, 65%, 46%) inset;
  font-size: 1.08em;
}

#medlem:active {
  box-shadow: 6px 6px 8px hsl(327, 65%, 46%) inset,
    -6px -6px 8px hsl(327, 65%, 62%) inset;
  font-size: 0.99em;
}

#login {
  background-color: #b47aea;
  border: 1px solid #b47aea;
}

#login:hover {
  box-shadow: 8px 8px 8px hsl(0, 0%, 0%), -6px -6px 8px hsl(0, 0%, 18%);
  box-shadow: 6px 6px 8px hsl(271, 73%, 75%) inset,
    -6px -6px 8px hsl(271, 73%, 60%) inset;
  font-size: 1.08em;

}

#login:active {
  box-shadow: 6px 6px 8px hsl(271, 73%, 60%) inset,
    -6px -6px 8px hsl(271, 73%, 75%) inset;
  font-size: 0.99em;
}

/*Sidebar*/
nav {
  height: 100vh;
  width: 2%;

  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;

  position: fixed;
  z-index: 1;
  top: 64px;
  background-color: hsl(0, 0%, 10%);
  color: #f0f0f0;
}

nav a{
  display: flex;
  justify-content: center;
  align-items: center;
  height: 64px;
  width: 100%;
  box-sizing: border-box;
  border-right: #f0f0f0 solid 2px;
}

.page_icon{
  height: 20px;
}

/*Main*/
main{
  padding-top: 64px;
  margin-left: 2%;
  color: #f0f0f0;
}

#explanation{
  display: flex;
}

.banner{
  height: 448px;
}

#filter{
  position: absolute;
  width: 100%;
}

#explanation div{
  position: absolute;
  display: flex;
  flex-direction: column;
  align-self: flex-end;
  gap: 16px;
  margin: 0px 0px 36px 48px;
  width: 512px;
  font-size: 24px;
  font-family: Inter-Regular;
}

#banner_title{
  font-family: Inter-SemiBold;
  font-size: 36px;
}

